# rustygenmo

./: Cargo.toml
simple.corpus/: file
src/: analyse.rs  main.rs
src/crawl/: crawler.rs  dailymail.rs  fanfiction.rs  mod.rs  pool.rs  store.rs
src/generate/: mod.rs
src/train/: analyse.rs  data.rs  mod.rs  train.rs
