[package]
name = "rustygenmo"
version = "0.1.0"
authors = ["denislobanov <denis.lobanov@zooei.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.0"
sled = "0.29.2"
serde = "1.0"
bincode = "1.2.0"
partial_application = "0.2.0"
rand = "~0.7.2"
isahc = "~0.7.6"
soup = "~0.4.1"
scraper = "~0.11.0"
url = "2.1.0"
